--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
-    "build:sass": "sass sass:css",
-    "autoprefixer": "postcss --no-map -u autoprefixer --autoprefixer.browsers -r css/*.css",
+    "build:sass": "sass sass:public/css",
+    "autoprefixer": "postcss --no-map -u autoprefixer --autoprefixer.browsers -r public/css/*.css",
     "build:css": "npm run build:sass && npm run autoprefixer",
     "watch:css": "onchange 'sass/**/*.scss' -- npm run build:css",
     "watch:all": "concurrently --kill-others 'npm run watch:css'",
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.0.0-beta3",
+    "@popperjs/core": "^2.11.2",
     "autoprefixer": "^10.0.0",
-    "concurrently": "^6.0.0",
     "bootstrap": "^5.0.0",
+    "concurrently": "^6.0.0",
     "copy-files-from-to": "^3.0.0",
     "normalize.css": "^8.0.0",
+    "onchange": "^7.0.0",
     "postcss-cli": "^9.0.0"
   },
   "copyFiles": [
