--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "private": true,
   "scripts": {
     "build:sass": "sass sass:public/css",
     "autoprefixer": "postcss --no-map -u autoprefixer --autoprefixer.browsers -r public/css/*.css",
